CSS changes: - updated styles for view switcher / sort buttons - further refactoring Markup changes: - headers on both map.blade and list.blade modified to wrap the filter and the view switcher in a container for alignment purposes - removed <small> tag from logo link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,7 +300,10 @@ header .home {
   vertical-align: top;
   position: relative;
   top: 2px;
+  text-decoration: none;
   background: url(../img/logo_no_eyes.png); }
+  header .home small {
+    text-decoration: none; }
 
 header .home:hover {
   background-position: 0 -52px; }
@@ -734,10 +737,11 @@ ul#items {
   position: relative;
   background: #74b164; }
   .filter form {
-    width: 995px;
+    width: 750px;
+    float: left;
     display: block;
     font-family: "open_sans_regular", sans-serif;
-    margin: 0 auto;
+    margin: 0;
     height: 46px;
     line-height: 40px;
     position: relative; }
@@ -769,6 +773,10 @@ ul#items {
   .filter ul.ui-menu, .filter .ui-front {
     border: none !important;
     z-index: 9999 !important; }
+  .filter .main {
+    position: relative; }
+    .filter .main .content.full {
+      padding: 0; }
 
 .filter label .select2-container .select2-choice .select2-arrow {
   background: url("http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/images/ui-icons_888888_256x240.png"); }
@@ -1059,44 +1067,35 @@ img {
 .listings.active {
   display: block; }
 
-/* line 1004, style.scss */
 .listing_attributes {
   height: 99px;
   padding: 14px 0;
-  list-style: none; }
+  list-style: none;
+  max-width: 180px; }
+  .listing_attributes li {
+    margin-top: 3px;
+    line-height: 1.2;
+    white-space: nowrap;
+    padding: 0 15px; }
+    .listing_attributes li:first-child {
+      margin-top: 0; }
+  .listing_attributes .price {
+    font-size: 1.4em;
+    letter-spacing: -1px; }
+  .listing_attributes .address {
+    font-size: 1em;
+    color: #7a694b; }
+  .listing_attributes .description {
+    font-size: .8em;
+    font-family: 'open_sansbold', sans-serif;
+    font-weight: 700; }
 
-/* line 1011, style.scss */
-.listing_attributes li {
-  margin-top: 3px;
-  line-height: 1.2;
-  padding: 0 15px; }
-
-/* line 1015, style.scss */
-.listing_attributes li:first-child {
-  margin-top: 0; }
-
-/* line 1019, style.scss */
-.listing_attributes .price {
-  font-size: 1.4em;
-  letter-spacing: -1px; }
-
-/* line 1023, style.scss */
-.listing_attributes .address {
-  font-size: 1em;
-  color: #7a694b; }
-
-/* line 1027, style.scss */
-.listing_attributes .description {
-  font-size: .8em;
-  font-family: 'open_sansbold', sans-serif;
-  font-weight: 700; }
-
-/* line 1033, style.scss */
 .favourite {
   position: absolute;
   color: #74b164;
   right: 15px;
-  top: 175px; }
+  top: 175px;
+  font-size: 1.75em; }
 
 /* line 1038, style.scss */
 .favourite:hover {
@@ -1123,9 +1122,9 @@ img {
 
 .view_switcher {
   float: right;
-  position: absolute;
   top: 0px;
   right: 0;
+  text-align: right;
   height: 46px;
   line-height: 46px;
   color: white;
@@ -1161,9 +1160,15 @@ img {
     border: none;
     position: relative;
     top: 7px;
+    width: 80px !important;
+    font-weight: bold;
+    padding: 4px 8px 4px 4px;
+    font-size: 1em;
     float: right;
     margin-left: 10px;
     color: white; }
+    .view_switcher .ui-selectmenu-button .ui-selectmenu-text {
+      margin-right: 15px; }
 
 .ui-state-default .ui-icon-white {
   background-image: url(../img/ui-icons_ffffff_256x240.png); }
@@ -1976,9 +1981,13 @@ aside.my_properties h3:first-child {
   background: #74B164;
   color: white; }
 
-#sort-widget-menu .ui-state-focus {
+#sort-widget-menu li.ui-state-focus {
   background: #333333;
   color: white; }
+
+li.ui-state-focus {
+  background: #333333 !important;
+  color: white !important; }
 
 .cycle-prev, .cycle-next {
   display: block;
