CSS changes: - additions for handling the new view switcher and sort buttons on smaller screen resolutions (mobile still not perfect yet) - adjusted a number of styles for the ul.hits list on the map page - further refactoring
Markup changes:
- removed styles from the <h1> tag that displays the number of results on the list page and moved it into the stylesheets under a class called .resultsNum

Image changes:
- updated the gorilla's lines to match the gray of the header

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1030,6 +1030,7 @@ img {
 .main .full {
   width: 995px;
   margin: 0 auto;
+  max-width:100%;
 }
 /* line 868, style.scss */
 .main form.contact {
@@ -1081,7 +1082,6 @@ img {
   font-weight: bold;
   transition: .1s;
 }
-/* line 908, style.scss */
 .main form.contact input[type="submit"]:hover {
   cursor: pointer;
   background: #7a694b;
@@ -1101,6 +1101,10 @@ img {
   margin: 0 auto;
   width: 995px;
   padding: .5em 0;
+}
+.listings h1.resultsNum {
+  float: left; 
+  width: auto;
 }
 /* line 927, style.scss */
 .listings > ul {
@@ -1322,8 +1326,6 @@ img {
     background-size: auto auto;
     padding: 20px;
 }
-
-
 .button {
     display: inline-block;
    /* width: 100px; */
@@ -1335,14 +1337,12 @@ img {
     transition: .1s;
     text-decoration: none;
 }
-
 .button:hover {
     cursor: pointer;
     background: #5b964c;
     border: 1px solid #47743b;
     transition: .1s;
 }
-
 span.eyes {
     display: block;
     width: 15px;
@@ -1351,13 +1351,12 @@ span.eyes {
     left: 18px;
     top: 24px;
 }
-
 span.eyes .eye {
     display: inline-block;
     width: 4px;
     height: 4px;
     border-radius: 4px;
-    background: black;
+    background: #333;
     position: relative;
 }
 
@@ -1446,11 +1445,9 @@ span.eyes.blink .eye {
     color: #9a7913;
 }
 @media only screen and (max-width: 65.5625em) {
-  /* line 1080, style.scss */
   header {
     padding: 0 1em;
   }
-  /* line 1082, style.scss */
   header .main {
     width: 100%;
   }
@@ -1464,59 +1461,51 @@ span.eyes.blink .eye {
       }
     }
   }
-  /* line 1086, style.scss */
   .filter {
-    padding: 0 1em;
+    padding:0 1em;
+    .main {
+      width:auto;
+      .full {
+        max-width:100%;
+      }
+    }
+    form {
+      width:auto;
+    }
   }
-  /* line 1088, style.scss */
-  .filter form, .filter .main {
-    width: 100%;
-  }
-
-  /* line 1092, style.scss */
   .listings {
     width: 100%;
     padding: 0;
   }
-  /* line 1095, style.scss */
   .listings h1 {
     width: 100%;
     padding: 0 1em;
-    text-align: center;
+    // text-align: center;
     margin: 1em 0;
   }
-  /* line 1101, style.scss */
   .listings > ul {
     text-align: center;
     width: 100%;
   }
-  /* line 1104, style.scss */
   .listings > ul > li {
     display: inline-block;
     float: none;
     width: 28%;
     margin: .5em;
   }
-  /* line 1110, style.scss */
   .listings > ul > li:nth-child(4n) {
     margin: .5em;
   }
-  /* line 1115, style.scss */
   .listings .images img {
     width: 100%;
   }
-
-  /* line 1120, style.scss */
   .locale {
     left: 0;
   }
-
-  /* line 1124, style.scss */
   .main > form {
     width: 90%;
     margin: 0 auto;
   }
-  // Photos / reordering
   .dropzone {
     max-width:100%;
   }
@@ -1920,8 +1909,7 @@ div.pagination .previous:after {
   float: left;
   font-size: .7em;
 }
-
-/* line 1483, style.scss */
+// Map view - popup list of rentals
 ul.hits {
   list-style: none;
   margin: 0;
@@ -1932,61 +1920,53 @@ ul.hits {
   padding: 0;
   box-shadow: 0 0 20px dimGray;
   z-index: 9999;
+  li {
+    clear: left;
+    border-bottom: 1px solid #4a4a4a;
+    padding: 0;
+    height: 100px;
+    display: block;
+    position: relative;
+    margin:0!important;
+    width: 100%;
+    &:last-child {
+      border-bottom: none;
+    }
+    &:hover {
+      background: #f1f1f1;
+    }
+    img {
+      margin-right: 20px;
+      height: 100%;
+      width: 150px;
+    }
+    i {
+      color: #a1a1a1;
+      display: block;
+      font-style: normal;
+      font-size: 12px;
+    }
+    a {
+      font-weight: 500;
+      text-decoration: none;
+      width:100%;
+      margin:0!important;
+      display:inline-block;
+      padding:0!important;
+      color: #464646;
+      &:hover {
+        text-decoration: none;
+        color: #464646;
+      }
+    }
+    span {
+      font-size: 12px;
+    }
+  }
 }
-/* line 1493, style.scss */
-ul.hits li {
-  clear: left;
-  border-bottom: 1px solid #4a4a4a;
-  padding: 0;
-  height: 100px;
-  display: block;
-  position: relative;
-  width: 100%;
-}
-/* line 1501, style.scss */
-ul.hits li:last-child {
-  border-bottom: none;
-}
-/* line 1504, style.scss */
-ul.hits li:hover {
-  background: #f1f1f1;
-}
-/* line 1507, style.scss */
-ul.hits li img {
-  margin-right: 20px;
-  height: 100%;
-  width: auto;
-}
-/* line 1516, style.scss */
-ul.hits li i {
-  color: #a1a1a1;
-  display: block;
-  font-style: normal;
-  font-size: 12px;
-}
-/* line 1522, style.scss */
-ul.hits li a {
-  font-weight: 500;
-  text-decoration: none;
-  color: #464646;
-}
-/* line 1526, style.scss */
-ul.hits li a:hover {
-  text-decoration: none;
-  color: #464646;
-}
-/* line 1531, style.scss */
-ul.hits li span {
-  font-size: 12px;
-}
-
-/* line 1536, style.scss */
 ul.hits::-webkit-scrollbar {
   display: none;
 }
-
-/* line 1539, style.scss */
-
 @media screen and (max-width: 900px) {
     .toaster {
         left: 50%;
