CSS changes: - more fixes for search bar on smaller screens Markup changes: - moved the "view" label on the view switcher inside each option in the select, making styling more simple

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1128,9 +1128,9 @@ img {
   float: right;
   top: 0px;
   right: 0;
-  text-align: right;
   height: 46px;
   line-height: 46px;
+  vertical-align: top;
   color: white;
   z-index: 9000; }
   .view_switcher ul {
@@ -1159,12 +1159,15 @@ img {
         background: white;
         color: #74b164;
         text-decoration: none; }
+  .view_switcher select {
+    visibility: hidden; }
   .view_switcher .ui-selectmenu-button {
     background: #7A694B;
     border: none;
+    display: inline;
     position: relative;
     top: 7px;
-    width: 80px !important;
+    width: 120px !important;
     font-weight: bold;
     padding: 4px 8px 4px 4px;
     font-size: 1em;
@@ -1311,6 +1314,14 @@ span.eyes.blink .eye {
 .toastWarning:hover .fa-close {
   color: #9a7913; }
 
+#list-canvas #sort-widget-button {
+  float: right;
+  padding: 0;
+  margin: 0;
+  text-align: right;
+  background: #74B164;
+  color: white; }
+
 @media only screen and (max-width: 65.5625em) {
   header {
     padding: 0 1em; }
@@ -1379,7 +1390,10 @@ span.eyes.blink .eye {
       float: none;
       margin: 10px; }
       ul#items li:nth-child(4n+4) {
-        margin: 10px; } }
+        margin: 10px; }
+
+  #list-canvas #sort-widget-button {
+    margin: 1em; } }
 @media only screen and (max-width: 57.94em) {
   #map-canvas, #chart {
     display: none; }
@@ -1952,14 +1966,6 @@ aside.my_properties h3:first-child {
 #rental-list a {
   color: inherit;
   text-decoration: none; }
-
-#list-canvas #sort-widget-button {
-  float: right;
-  padding: 0;
-  margin: 0;
-  text-align: right;
-  background: #74B164;
-  color: white; }
 
 #sort-widget-menu li.ui-state-focus {
   background: #333333;
