CSS changes: - adjusted .select2-dropdown on homepage to sit on top of the "please enter a city" box instead of below it, giving the illusion that you're using the same input box as opposed to 2 separate ones. we can remove this class if a method is discovered for actually using the same input. a quick look over the select2 documentation suggests that it's standard for them to use a 2nd input.
Markup changes:
- added a script to dynamically add a class of .home to the body tag on the homepage only, so we can target the .select2 element without changing the one in the filter

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -762,6 +762,8 @@ ul#items {
     background-image: none; }
     .filter .ui-selectmenu-button span.ui-selectmenu-text {
       padding: 0; }
+  .filter .select2-dropdown {
+    z-index: 9999; }
   .filter button {
     padding: .475em;
     position: relative;
@@ -1967,9 +1969,11 @@ aside.my_properties h3:first-child {
   color: inherit;
   text-decoration: none; }
 
-#sort-widget-menu li.ui-state-focus {
-  background: #333333;
-  color: white; }
+#sort-widget-menu {
+  z-index: 9999; }
+  #sort-widget-menu li.ui-state-focus {
+    background: #333333;
+    color: white; }
 
 li.ui-state-focus {
   background: #333333 !important;
@@ -2183,5 +2187,9 @@ footer {
     font-size: 1.1em;
     margin-left: 10px;
     line-height: 100%; }
+
+.home span.select2-dropdown {
+  margin-top: -38px;
+  max-width: 680px; }
 
 /*# sourceMappingURL=style.css.map */
