--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -823,11 +823,9 @@ ul#items {
   background: #5b964c;
   transition: .2s;
 }
-
 .filter_toggle {
   display: none;
 }
-
 .filter {
   height: 46px;
   width: 100%;
@@ -863,6 +861,9 @@ ul#items {
     span.ui-selectmenu-text {
       padding: 0;
     }
+  }
+  .select2-dropdown {
+    z-index:9999;
   }
   button {
     padding:.475em;
@@ -2177,6 +2178,7 @@ aside.my_properties {
 }
 
 #sort-widget-menu {
+  z-index:9999;
   li.ui-state-focus {
     background:#333333;
     color:white;
@@ -2446,4 +2448,8 @@ footer {
     margin-left: 10px;
     line-height: 100%;
   }
+}
+.home span.select2-dropdown {
+  margin-top:-38px;
+  max-width:680px;
 }
